# Omium-MCP

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  server.py
docs/: QUICKSTART.md  architecture.md  quickstart.md  tool-coverage-test.md  transport.md
omium_mcp/: __init__.py  auth.py  cli.py  config.py  http.py  init.py  mcp_instance.py  tenant.py
omium_mcp/tools/: __init__.py  analytics.py  audit.py  billing.py  checkpoints.py  executions.py  failures.py  github.py  identity.py  observability.py  projects.py  recovery.py  replay.py  scores.py  traces.py  workflows.py
scripts/: test_all_tools.py  test_all_tools_report.json  test_all_tools_report_prod.json
